# dasbb

./: README.md  pixi.toml  pyproject.toml
dasbb/: __init__.py  data.py  design.py  diagnostics.py  forward.py  information.py  inversion.py  synthetic.py  weighting.py
dasbb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: quick_start.py  robust_location.py  sensor_placement.py
paper/: method_paper.md  references.bib
tests/: test_data.py  test_design.py  test_forward.py  test_inversion.py  test_weighting.py
