[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasbb"
version = "0.1.0"
description = "Joint DAS + Broadband Bayesian seismic inversion for earthquake location and tomography"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "scikit-fmm>=2022.3",
    "matplotlib>=3.5",
    "h5py>=3.7",
]

[project.optional-dependencies]
mcmc = ["pymc>=5.0", "emcee>=3.1"]
io = ["obspy>=1.4"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["dasbb[mcmc,io,dev]"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
